force-app/main/default/objects/PurchaserPlan__c/PurchaserPlan__c.object-meta.xml
<CustomObject>
    <description>Represents the payer plan that a purchaser makes available to its members and members’ dependents.
PurchaserPlan is a new core object for Health Cloud.</description>
    <label>Purchaser Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaserPlan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>