force-app/main/default/objects/PurchaserPlan__c/fields/EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFrom__c</fullName>
    <inlineHelpText>The date from which this purchaser plan is effective.</inlineHelpText>
    <label>EffectiveFrom</label>
    <required>true</required>
    <type>Date</type>
</CustomField>