force-app/main/default/objects/PurchaserPlan__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <inlineHelpText>The ID of the payer’s Account object record.</inlineHelpText>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PurchaserPlan</relationshipLabel>
    <relationshipName>PurchaserPlanPayer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>