force-app/main/default/objects/PurchaserPlan__c/fields/PlanNumber__c.field-meta.xml
<CustomField>
    <fullName>PlanNumber__c</fullName>
    <inlineHelpText>The plan’s reference number.The plan’s reference number.</inlineHelpText>
    <label>PlanNumber</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>