force-app/main/default/objects/PurchaserPlan__c/fields/PlanStatus__c.field-meta.xml
<CustomField>
    <fullName>PlanStatus__c</fullName>
    <inlineHelpText>Indicates whether the plan is active.</inlineHelpText>
    <label>PlanStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>