force-app/main/default/objects/PurchaserPlan__c/fields/PlanType__c.field-meta.xml
<CustomField>
    <fullName>PlanType__c</fullName>
    <inlineHelpText>The type of plan, with the following default options: &gt;&gt;</inlineHelpText>
    <label>PlanType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>