force-app/main/default/objects/PurchaserPlan__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <inlineHelpText>The description of the service type offered by this plan.</inlineHelpText>
    <label>ServiceType</label>
    <length>32</length>
    <type>Text</type>
</CustomField>